--- a/app/public/html/app.html
+++ b/app/public/html/app.html
@@ -96,6 +96,7 @@
         </div>
         <div class="popup__body">
           <div class="popup__text popup__text_tac">Ви дійсно хочете видалити обліковий запис?</div>
+          <div class="popup__text popup__text_tac">Ця дія не зворотня.</div>
         </div>
         <div class="popup__footer">
           <button class="popup__btn" type="submit">так</button>
