--- a/app/public/app.html
+++ b/app/public/app.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="../css/main.css">
     <link rel="icon" href="../img/logo.png">
     <script defer src="../js/main.js"></script>
-    <title>My-cha-cha :)</title>
+    <title>Login</title>
   </head>
   <body><!DOCTYPE html>
     <html class="wjs-MobileHeightFix" lang="ua">
