--- a/app/public/html/app.html
+++ b/app/public/html/app.html
@@ -15,7 +15,7 @@
           <button class="header__menu-btn header__menu-btn_primary" type="button" data-target-group="aside" data-target="menu"><i class="ico" style="font-size: 30px">&#x61;</i></button>
           <div class="header__info">
             <div class="logo">
-              <p class="logo__name">UN</p><img class="logo__img" src="img/users/undefined.jpg">
+              <p class="logo__name">UN</p>
             </div>
             <div class="header__text-wrapper">
               <h1 class="header__header"></h1>
@@ -254,7 +254,7 @@
         <div class="popup__messages-area">
           <div class="popup__message popup__message_error"><i class="ico">&#x73;</i><span>Виберіть картинку</span></div>
           <div class="popup__message popup__message_error"><i class="ico">&#x73;</i><span>Не коректний тип файлу. Картинка повинна бути у форматі jpg, jpeg або png</span></div>
-          <div class="popup__message popup__message_error"><i class="ico">&#x73;</i><span>Завеликий розмір файлу. Картинка повинна бути меншою за 2 мегабайти</span></div>
+          <div class="popup__message popup__message_error"><i class="ico">&#x73;</i><span>Завеликий розмір файлу. Картинка повинна бути меншою за 5 мегабайт</span></div>
         </div>
         <div class="popup__footer">
           <button class="popup__btn" type="submit" form="changeUserAvaForm">так</button>
