виправлення помилок рендерингу, обробка помилок

--- a/app/public/html/login.html
+++ b/app/public/html/login.html
@@ -37,7 +37,7 @@
               <h4 data-translate="h4">вільний веб-чат</h4>
               <h5 data-translate="h51">щоб увійти, введіть пароль і логін</h5>
               <h5 data-translate="h52" style="display: none">щоб почати користуватися чатом, пройдіть реєстрацію</h5>
-              <form name="loginForm" method="post" action="api/authorization/login">
+              <form name="loginForm" method="post" data-action="api/authorization/login">
                 <input name="lang" type="hidden" value="ua">
                 <input name="name" type="name" placeholder="логін…">
                 <div class="error-info"><i class="ico">&#x73;</i><span></span></div>
