--- a/app/public/html/app.html
+++ b/app/public/html/app.html
@@ -15,7 +15,7 @@
           <button class="header__menu-btn header__menu-btn_primary" type="button" data-target-group="aside" data-target="menu"><i class="ico" style="font-size: 30px">&#x61;</i></button>
           <div class="header__info">
             <div class="logo">
-              <p class="logo__name">UN</p>
+              <p class="logo__name">UN</p><img class="logo__img" src="">
             </div>
             <div class="header__text-wrapper">
               <h1 class="header__header"></h1>
@@ -23,6 +23,7 @@
             </div>
           </div>
           <input class="header__search" type="text">
+          <div class="header__search-results-wrapper"></div>
           <button class="header__menu-btn header__menu-btn_secondary" type="button"><i class="ico" style="font-size: 25px">&#x55;</i></button>
         </header>
         <div class="subheader" data-id="6gvxcVu6DWcbMZ98UAAh" data-group="true">
