--- a/app/public/html/app.html
+++ b/app/public/html/app.html
@@ -23,7 +23,13 @@
             </div>
           </div>
           <input class="header__search" type="text">
-          <div class="header__search-results-wrapper"></div>
+          <div class="header__search-results-wrapper">
+            <div class="wjs-scroll header__search-results-wrapper-inner" data-scroll="right">
+              <div class="wjs-scroll__content-wrapper">
+                <div class="wjs-scroll__content"></div>
+              </div>
+            </div>
+          </div>
           <button class="header__menu-btn header__menu-btn_secondary" type="button"><i class="ico" style="font-size: 25px">&#x55;</i></button>
         </header>
         <div class="subheader" data-id="6gvxcVu6DWcbMZ98UAAh" data-group="true">
