побудова списку контактів, завантаження аватарки юзера при старті

--- a/app/public/html/app.html
+++ b/app/public/html/app.html
@@ -66,7 +66,36 @@
               </div>
               <div class="list" data-list-group="aside" data-list="chatlist"></div>
               <div class="list" data-list-group="aside" data-list="contactlist"></div>
-              <div class="list" data-list-group="aside" data-list="usercard"></div>
+              <div class="list" data-list-group="aside" data-list="usercard">
+                <div class="logo logo_user-card">
+                  <p class="logo__name">PR</p><img class="logo__img" src="">
+                </div>
+                <div class="user-info">
+                  <div class="user-info__name">Philomena Resendez</div>
+                  <div class="user-info__id">@philomenaRezzz</div>
+                </div>
+                <ul class="card-menu">
+                  <li>
+                    <p>сповіщення увімкнені</p>
+                    <button type="button">вимкнути сповіщення</button>
+                  </li>
+                  <li>
+                    <p>контакт не заблокований</p>
+                    <button type="button">заблокувати</button>
+                  </li>
+                  <li>
+                    <p>в контактах</p>
+                    <button type="button">видалити з контактів</button>
+                  </li>
+                  <li>
+                    <button type="button">поділитися контактом</button>
+                  </li>
+                  <li>
+                    <button type="button" data-role="showClearHistory">очистити історію</button>
+                  </li>
+                </ul>
+                <button class="round-btn" type="button" data-group="false" data-id="3tVc"><i class="ico">&#x6a;</i></button>
+              </div>
               <div class="list" data-list-group="aside" data-list="groupcard"></div>
               <div class="list" data-list-group="aside" data-list="chat"></div>
             </div>
@@ -77,7 +106,36 @@
         <div class="list list_active" data-list-group="page" data-list="startP">
           <p class="right-side__info">Виберіть чат або контакт і почніть спілкування</p>
         </div>
-        <div class="list" data-list-group="page" data-list="usercardP"></div>
+        <div class="list" data-list-group="page" data-list="usercardP">
+          <div class="logo logo_user-card">
+            <p class="logo__name">PR</p><img class="logo__img" src="">
+          </div>
+          <div class="user-info">
+            <div class="user-info__name">Philomena Resendez</div>
+            <div class="user-info__id">@philomenaRezzz</div>
+          </div>
+          <ul class="card-menu">
+            <li>
+              <p>сповіщення увімкнені</p>
+              <button type="button">вимкнути сповіщення</button>
+            </li>
+            <li>
+              <p>контакт не заблокований</p>
+              <button type="button">заблокувати</button>
+            </li>
+            <li>
+              <p>в контактах</p>
+              <button type="button">видалити з контактів</button>
+            </li>
+            <li>
+              <button type="button">поділитися контактом</button>
+            </li>
+            <li>
+              <button type="button" data-role="showClearHistory">очистити історію</button>
+            </li>
+          </ul>
+          <button class="round-btn" type="button" data-group="false" data-id="3tVc"><i class="ico">&#x6a;</i></button>
+        </div>
         <div class="list" data-list-group="page" data-list="groupcardP"></div>
         <div class="list" data-list-group="page" data-list="chatP"></div>
       </div>
