--- a/app/public/html/app.html
+++ b/app/public/html/app.html
@@ -68,33 +68,29 @@
               <div class="list" data-list-group="aside" data-list="contactlist"></div>
               <div class="list" data-list-group="aside" data-list="usercard">
                 <div class="logo logo_user-card">
-                  <p class="logo__name">PR</p><img class="logo__img" src="">
+                  <p class="logo__name"></p><img class="logo__img" src="undefined">
                 </div>
                 <div class="user-info">
-                  <div class="user-info__name">Philomena Resendez</div>
-                  <div class="user-info__id">@philomenaRezzz</div>
+                  <div class="user-info__name"></div>
+                  <div class="user-info__id">@</div>
                 </div>
                 <ul class="card-menu">
                   <li>
-                    <p>сповіщення увімкнені</p>
-                    <button type="button">вимкнути сповіщення</button>
-                  </li>
-                  <li>
                     <p>контакт не заблокований</p>
-                    <button type="button">заблокувати</button>
+                    <button type="button" data-role="addToBlockList" data-id="undefined">заблокувати</button>
                   </li>
                   <li>
-                    <p>в контактах</p>
-                    <button type="button">видалити з контактів</button>
+                    <p>не в контактах</p>
+                    <button type="button" data-role="addToContacts" data-id="undefined">додати до контактів</button>
                   </li>
                   <li>
-                    <button type="button">поділитися контактом</button>
+                    <button type="button" data-role="copyContactToClipboard" data-id="undefined">скопіювати контакт</button>
                   </li>
                   <li>
-                    <button type="button" data-role="showClearHistory">очистити історію</button>
+                    <button type="button" data-role="showClearHistory" data-id="undefined">очистити історію</button>
                   </li>
                 </ul>
-                <button class="round-btn" type="button" data-group="false" data-id="3tVc"><i class="ico">&#x6a;</i></button>
+                <button class="round-btn" type="button" data-group="false" data-id="undefined"><i class="ico">&#x6a;</i></button>
               </div>
               <div class="list" data-list-group="aside" data-list="groupcard"></div>
               <div class="list" data-list-group="aside" data-list="chat"></div>
@@ -108,33 +104,29 @@
         </div>
         <div class="list" data-list-group="page" data-list="usercardP">
           <div class="logo logo_user-card">
-            <p class="logo__name">PR</p><img class="logo__img" src="">
+            <p class="logo__name"></p><img class="logo__img" src="undefined">
           </div>
           <div class="user-info">
-            <div class="user-info__name">Philomena Resendez</div>
-            <div class="user-info__id">@philomenaRezzz</div>
+            <div class="user-info__name"></div>
+            <div class="user-info__id">@</div>
           </div>
           <ul class="card-menu">
             <li>
-              <p>сповіщення увімкнені</p>
-              <button type="button">вимкнути сповіщення</button>
-            </li>
-            <li>
               <p>контакт не заблокований</p>
-              <button type="button">заблокувати</button>
+              <button type="button" data-role="addToBlockList" data-id="undefined">заблокувати</button>
             </li>
             <li>
-              <p>в контактах</p>
-              <button type="button">видалити з контактів</button>
+              <p>не в контактах</p>
+              <button type="button" data-role="addToContacts" data-id="undefined">додати до контактів</button>
             </li>
             <li>
-              <button type="button">поділитися контактом</button>
+              <button type="button" data-role="copyContactToClipboard" data-id="undefined">скопіювати контакт</button>
             </li>
             <li>
-              <button type="button" data-role="showClearHistory">очистити історію</button>
+              <button type="button" data-role="showClearHistory" data-id="undefined">очистити історію</button>
             </li>
           </ul>
-          <button class="round-btn" type="button" data-group="false" data-id="3tVc"><i class="ico">&#x6a;</i></button>
+          <button class="round-btn" type="button" data-group="false" data-id="undefined"><i class="ico">&#x6a;</i></button>
         </div>
         <div class="list" data-list-group="page" data-list="groupcardP"></div>
         <div class="list" data-list-group="page" data-list="chatP"></div>
