--- a/app/public/html/app.html
+++ b/app/public/html/app.html
@@ -403,18 +403,12 @@
           <button class="popup__close"><i class="ico">&#x4d;</i></button>
         </div>
         <div class="popup__body">
-          <div class="popup__list-wrapper wjs-scroll" data-scroll="right" data-scroll-hidden="horizontal">
-            <div class="wjs-scroll__content-wrapper">
-              <div class="wjs-scroll__content">
-                <ul class="popup__list">
-                  <li class="popup__item">
-                    <div class="logo">
-                      <p class="logo__name">AB</p><img class="logo__img" src="../img/users/user1.jpg">
-                    </div>
-                    <div class="popup__user-name">Estrella Wildauer</div>
-                    <button class="popup__user-restore"><i class="ico">&#x4d;</i></button>
-                  </li>
-                </ul>
+          <div class="popup__list-wrapper">
+            <div class="wjs-scroll" data-scroll="right" data-scroll-hidden="horizontal">
+              <div class="wjs-scroll__content-wrapper">
+                <div class="wjs-scroll__content">
+                  <ul class="popup__list"></ul>
+                </div>
               </div>
             </div>
           </div>
