рендер моночату у першому наближенні

--- a/app/public/html/app.html
+++ b/app/public/html/app.html
@@ -32,13 +32,13 @@
           </div>
           <button class="header__menu-btn header__menu-btn_secondary" type="button"><i class="ico" style="font-size: 25px">&#x55;</i></button>
         </header>
-        <div class="subheader" data-id="6gvxcVu6DWcbMZ98UAAh" data-group="true">
+        <div class="subheader" data-id="undefined" data-group="undefined">
           <div class="logo">
-            <p class="logo__name">UN</p><img class="logo__img" src="../img/users/user4.jpg">
+            <p class="logo__name">UN</p><img class="logo__img" src="undefined">
           </div>
           <div class="subheader__text-wrapper">
-            <h1 class="subheader__name">Current Contact Name</h1>
-            <h4 class="subheader__id">@hereIsId1239ddfv</h4>
+            <h1 class="subheader__name"></h1>
+            <h4 class="subheader__id">@</h4>
           </div>
         </div>
         <div class="lists-wrapper wjs-scroll" data-scroll="right">
