--- a/app/public/html/app.html
+++ b/app/public/html/app.html
@@ -32,7 +32,7 @@
           </div>
           <button class="header__menu-btn header__menu-btn_secondary" type="button"><i class="ico" style="font-size: 25px">&#x55;</i></button>
         </header>
-        <div class="subheader" data-id="undefined" data-group="undefined">
+        <div class="subheader" data-group="false">
           <div class="logo">
             <p class="logo__name">UN</p><img class="logo__img" src="undefined">
           </div>
