рендер карточки групи

--- a/app/public/html/app.html
+++ b/app/public/html/app.html
@@ -320,7 +320,7 @@
       </div>
       <div class="popup popup_search" id="popupGroupChat">
         <div class="popup__header">
-          <h4 class="popup__header-name">Створити новий чат</h4>
+          <h4 class="popup__header-name">Редактор чату</h4>
           <button class="popup__close"><i class="ico">&#x4d;</i></button>
         </div>
         <div class="popup__body">
