створення нового групового чату

--- a/app/public/html/app.html
+++ b/app/public/html/app.html
@@ -332,13 +332,7 @@
               <div class="popup__list-wrapper wjs-scroll" data-scroll="right" data-scroll-hidden="horizontal">
                 <div class="wjs-scroll__content-wrapper">
                   <div class="wjs-scroll__content">
-                    <ul class="popup__list" id="memberslist">
-                      <li class="popup__item">
-                        <label>
-                          <input type="checkbox" checked><i class="ico check">&#x5a;</i><i class="ico uncheck">&#x56;</i><span>Вася Пупкін</span><span>(@WEORI75MoBvQOhNq)</span>
-                        </label>
-                      </li>
-                    </ul>
+                    <ul class="popup__list" id="memberslist"></ul>
                   </div>
                 </div>
               </div>
@@ -346,24 +340,14 @@
             <div class="popup__col">
               <div class="popup__text">пошук по id</div>
               <div class="popup__search-wrapper">
-                <input type="text" name="id"><i class="ico">&#x55;</i>
-                <div class="popup__search-result">
-                  <label>
-                    <input type="checkbox"><i class="ico check">&#x5a;</i><i class="ico uncheck">&#x56;</i><span>Вася Пупкін</span><span>(@WEORI75MoBvQOhNq)</span>
-                  </label>
-                </div>
+                <input type="text" name="id"><i class="ico" id="searchIDInGP">&#x55;</i>
+                <div class="popup__search-result"></div>
               </div>
               <div class="popup__text">Вибрати з контактів</div>
               <div class="popup__list-wrapper wjs-scroll" data-scroll="right" data-scroll-hidden="horizontal">
                 <div class="wjs-scroll__content-wrapper">
                   <div class="wjs-scroll__content">
-                    <ul class="popup__list" id="contactslist">
-                      <li class="popup__item">
-                        <label>
-                          <input type="checkbox"><i class="ico check">&#x5a;</i><i class="ico uncheck">&#x56;</i><span>Вася Пупкін</span><span>(@WEORI75MoBvQOhNq)</span>
-                        </label>
-                      </li>
-                    </ul>
+                    <ul class="popup__list" id="contactslist"></ul>
                   </div>
                 </div>
               </div>
