--- a/app/public/html/app.html
+++ b/app/public/html/app.html
@@ -227,7 +227,7 @@
           <button class="popup__close"><i class="ico">&#x4d;</i></button>
         </div>
         <div class="popup__body">
-          <form id="langswitch" name="langswitch">
+          <form id="themaswitch" name="themaswitch">
             <label class="popup__label">
               <input type="radio" name="thema" value="default"><i class="ico">&#x5c;</i><i class="ico">&#x5b;</i>
               <div class="popup__divider"></div><span>за замовчуванням</span>
@@ -239,7 +239,7 @@
           </form>
         </div>
         <div class="popup__footer">
-          <button class="popup__btn" type="submit" form="langswitch">так</button>
+          <button class="popup__btn" type="submit" form="themaswitch">так</button>
           <button class="popup__btn" type="button" data-role="resetPopup">скасувати</button>
         </div>
       </div>
