передача повідомлень в моно-чатах

--- a/app/public/html/app.html
+++ b/app/public/html/app.html
@@ -90,7 +90,7 @@
                     <button type="button" data-role="showClearHistory" data-id="undefined">очистити історію</button>
                   </li>
                 </ul>
-                <button class="round-btn" type="button" data-group="false" data-id="undefined"><i class="ico">&#x6a;</i></button>
+                <button class="round-btn round-btn_active" type="button" data-group="false" data-id="undefined"><i class="ico">&#x6a;</i></button>
               </div>
               <div class="list" data-list-group="aside" data-list="groupcard"></div>
               <div class="list" data-list-group="aside" data-list="chat"></div>
@@ -126,7 +126,7 @@
               <button type="button" data-role="showClearHistory" data-id="undefined">очистити історію</button>
             </li>
           </ul>
-          <button class="round-btn" type="button" data-group="false" data-id="undefined"><i class="ico">&#x6a;</i></button>
+          <button class="round-btn round-btn_active" type="button" data-group="false" data-id="undefined"><i class="ico">&#x6a;</i></button>
         </div>
         <div class="list" data-list-group="page" data-list="groupcardP"></div>
         <div class="list" data-list-group="page" data-list="chatP"></div>
